fixed horizontal scroll in page

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,14 +1,15 @@
 @use 'utilities' as c;
 footer{
+  .row{
+    width: 100%; /*if not 100 then it will not take all the available space in flex*/
+    align-self: center !important;
+  }
   p{
     &:hover{
       color: c.$red-color;
       transform: scale(1.03);
     }
   }
-} 
-
-footer{
   i{
     &:hover{
       color: c.$red-color;
